<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>turtlebot3_flexbe_behaviors</name>
    <version>0.0.1</version>
    <description>
       turtlebot3_flexbe_behaviors references all implemented behaviors.
    </description>
    <author email="todo@todo.com">TODO</author>
    <maintainer email="todo@todo.com">TODO</maintainer>
    <license>BSD</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>flexbe_core</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <export>
        <flexbe_behaviors />
        <build_type>ament_cmake</build_type>
    </export>
</package>
